# foreign_exchange_de_project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  design_note.md  docker-compose.yaml  main_azure.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main_fx-function-app.yml
azure/: main.ipynb
azure/fx-functions/: function_app.py
azure_functions/: function_app.py  requirements.txt
config/: airflow.cfg
dags/: fx_pipeline_dag.py
dags/scripts/: ddl.py  extract.py  load.py  transform.py
fx-function-app/: requirements.txt
notebooks/: fx_warehouse.sqlite  fx_warehouse.sqlite-journal  main.ipynb
sql/ddl/: dim_currencies.sql  dim_date.sql  fact_fx.sql  raw_fx.sql
sql/queries/: ytd_calculations.sql
tests/: test_extract.py
