[project]
name = "fx-pipeline"
version = "1.0.0"
description = "FX rates ETL pipeline"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["dags"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.sqlfluff.core]
dialect = "sqlite"
max_line_length = 100